[gd_scene load_steps=3 format=3 uid="uid://cpnn8nuyqmuhk"]

[ext_resource type="Script" path="res://gui/level_menu/level_card/level_card.gd" id="1_8gqq1"]
[ext_resource type="Texture2D" uid="uid://cfisiwojfbp85" path="res://icon.svg" id="2_xuwru"]

[node name="LevelCard" type="AspectRatioContainer"]
offset_right = 1152.0
offset_bottom = 648.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8gqq1")

[node name="LevelTextureRect" type="TextureRect" parent="."]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("2_xuwru")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 100
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 0

[node name="HBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="LevelNameLabel" type="Label" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 1
text = "Level Name"
horizontal_alignment = 1
vertical_alignment = 3
